fixing subtitle spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -207,6 +207,9 @@ body {
 .flex-row {
   display: flex;
   flex-direction: row;
+  margin-top: -2rem;
+  margin-left: 1rem;
+  gap: 0.4rem;
 }
 
 /* Description text */
